basic events theming

--- a/config/sync/views.view.events.yml
+++ b/config/sync/views.view.events.yml
@@ -292,7 +292,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<h2>{{ title }}</h2>\r\n{{ field_oc_date }}\r\n{{ body }}"
+            text: "<div class=\"title\">{{ title }}</div>\r\n{{ field_oc_date }}\r\n{{ body }}"
             make_link: false
             path: ''
             absolute: false
