--- a/config/sync/core.entity_form_display.paragraph.image.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.image.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.image.field_admin_description
     - field.field.paragraph.image.field_image
-    - field.field.paragraph.image.field_image_style
+    - field.field.paragraph.image.field_image_size
     - field.field.paragraph.image.field_link
     - field.field.paragraph.image.field_widget_title
     - paragraphs.paragraphs_type.image
@@ -46,7 +46,7 @@ content:
         entity_browser_id: image_browser
     type: inline_entity_form_complex
     region: content
-  field_image_style:
+  field_image_size:
     weight: 3
     settings: {  }
     third_party_settings: {  }
