--- a/config/sync/core.entity_view_display.media.image.square.yml
+++ b/config/sync/core.entity_view_display.media.image.square.yml
@@ -24,14 +24,6 @@ targetEntityType: media
 bundle: image
 mode: square
 content:
-  field_caption:
-    type: string
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    region: content
   field_media_image:
     type: responsive_image
     weight: 0
@@ -44,6 +36,7 @@ content:
 hidden:
   addtoany: true
   created: true
+  field_caption: true
   field_media_categories: true
   name: true
   thumbnail: true
