--- a/config/sync/core.entity_view_display.paragraph.image.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.image.preview.yml
@@ -6,7 +6,7 @@ dependencies:
     - core.entity_view_mode.paragraph.preview
     - field.field.paragraph.image.field_admin_description
     - field.field.paragraph.image.field_image
-    - field.field.paragraph.image.field_image_style
+    - field.field.paragraph.image.field_link
     - field.field.paragraph.image.field_widget_title
     - paragraphs.paragraphs_type.image
   module:
@@ -33,6 +33,5 @@ content:
     region: content
 hidden:
   field_image: true
-  field_image_style: true
   field_link: true
   field_widget_title: true
