--- a/config/sync/core.entity_view_display.paragraph.image.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.image.preview.yml
@@ -33,5 +33,6 @@ content:
     region: content
 hidden:
   field_image: true
+  field_image_size: true
   field_link: true
   field_widget_title: true
