--- a/web/modules/custom/citizen/citizen.libraries.yml
+++ b/web/modules/custom/citizen/citizen.libraries.yml
@@ -1,5 +1,6 @@
 global:
   version: 1.0
+  header: true
   css:
     theme:
       js/select2/select2.min.css: {}
@@ -14,7 +15,7 @@ global:
     - core/drupalSettings
     - core/jquery.once
 node:
-  version: 1.x
+  version: 1.0
   css:
     theme:
       css/node.css: {}
