--- a/config/sync/webform.webform.contact.yml
+++ b/config/sync/webform.webform.contact.yml
@@ -1,4 +1,3 @@
-uuid: bb4d8c1f-afb2-4213-9c6d-bf02b072b18c
 langcode: en
 status: open
 dependencies:
@@ -7,11 +6,6 @@ dependencies:
       - webform
   module:
     - antibot
-third_party_settings:
-  antibot:
-    antibot: true
-_core:
-  default_config_hash: oZIx_IHS7gdveuJ3iSbhNY-A1FwlieWPdjJEJz4Wlb4
 open: null
 close: null
 weight: 0
@@ -102,7 +96,7 @@ settings:
   draft_auto_save: false
   draft_saved_message: ''
   draft_loaded_message: ''
-  confirmation_type: message
+  confirmation_type: inline
   confirmation_title: ''
   confirmation_message: 'Your message has been sent.'
   confirmation_url: '<front>'
@@ -251,3 +245,9 @@ handlers:
       sender_mail: ''
       sender_name: ''
       theme_name: ''
+uuid: bb4d8c1f-afb2-4213-9c6d-bf02b072b18c
+third_party_settings:
+  antibot:
+    antibot: true
+_core:
+  default_config_hash: oZIx_IHS7gdveuJ3iSbhNY-A1FwlieWPdjJEJz4Wlb4
