--- a/web/modules/custom/citizen_custom/composer.json
+++ b/web/modules/custom/citizen_custom/composer.json
@@ -4,11 +4,11 @@
   "description": "Custom glue module for Electric Citizen sites",
   "keywords": ["Drupal"],
   "license": "GPL-2.0+",
-  "homepage": "https://www.drupal.org/project/citizen",
+  "homepage": "https://www.drupal.org/project/citizen_custom",
   "minimum-stability": "dev",
   "support": {
-    "issues": "https://www.drupal.org/project/issues/citizen",
-    "source": "http://cgit.drupalcode.org/citizen"
+    "issues": "https://www.drupal.org/project/issues/citizen_custom",
+    "source": "http://cgit.drupalcode.org/citizen_custom"
   },
   "require": { }
 }
