fix easy breadcrumb

--- a/config/sync/block.block.citizen_patterns_sitesearch.yml
+++ b/config/sync/block.block.citizen_patterns_sitesearch.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - citizen_custom
+    - citizen
     - system
   theme:
     - citizen_patterns
