--- a/config/sync/easy_breadcrumb.settings.yml
+++ b/config/sync/easy_breadcrumb.settings.yml
@@ -5,7 +5,7 @@ language_path_prefix_as_segment: false
 use_menu_title_as_fallback: true
 remove_repeated_segments: true
 include_invalid_paths: true
-excluded_paths: node
+excluded_paths: ''
 segments_separator: null
 title_segment_as_link: false
 title_from_page_when_available: true
