Fix WYSIWYG media and buttons

--- a/config/sync/core.entity_view_display.media.document.full_embed.yml
+++ b/config/sync/core.entity_view_display.media.document.full_embed.yml
@@ -1,6 +1,6 @@
 uuid: 08440bf2-5631-4ffe-afcf-8ed149f2e886
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.media.full_embed
