--- a/config/sync/core.entity_view_display.media.video.banner.yml
+++ b/config/sync/core.entity_view_display.media.video.banner.yml
@@ -1,6 +1,6 @@
 uuid: afe530dc-5e33-4c5d-9706-df974c8dc3f5
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.media.banner
@@ -9,7 +9,6 @@ dependencies:
     - media.type.video
   module:
     - layout_builder
-    - layout_discovery
     - video_embed_field
 third_party_settings:
   layout_builder:
