--- a/config/sync/embed.button.media.yml
+++ b/config/sync/embed.button.media.yml
@@ -2,6 +2,11 @@ uuid: 6b310521-ba88-4519-93dd-5e055e3261a9
 langcode: en
 status: true
 dependencies:
+  config:
+    - core.entity_view_mode.media.large_embed
+    - core.entity_view_mode.media.medium_embed
+    - core.entity_view_mode.media.small_embed
+    - entity_browser.browser.embedded_browser
   content:
     - 'file:file:cf0d0363-e980-4d9c-8bb4-ce4c5a29b93c'
   module:
@@ -16,7 +21,6 @@ type_settings:
   entity_type: media
   bundles: {  }
   display_plugins:
-    - 'view_mode:media.full_embed'
     - 'view_mode:media.large_embed'
     - 'view_mode:media.medium_embed'
     - 'view_mode:media.small_embed'
