--- a/config/sync/media.type.image.yml
+++ b/config/sync/media.type.image.yml
@@ -1,7 +1,12 @@
 uuid: 8c4d3cc5-4872-4cc7-8aa4-b8f68eeb1f99
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - crop
+third_party_settings:
+  crop:
+    image_field: _none
 _core:
   default_config_hash: L_AjN7AIbs4CLrtnPlkUyx_1gDbfkgqy4TeqETVknPA
 id: image
@@ -9,9 +14,8 @@ label: Image
 description: ''
 source: image
 queue_thumbnail_downloads: false
-new_revision: false
+new_revision: true
 source_configuration:
   source_field: field_media_image
   gather_exif: false
-field_map:
-  mime: field_media_image
+field_map: {  }
