Upgrade to 8.7.6, add paragraph library to fix bug

--- a/config/sync/core.entity_view_display.node.landing_page.default.yml
+++ b/config/sync/core.entity_view_display.node.landing_page.default.yml
@@ -36,6 +36,7 @@ third_party_settings:
               context_mapping: {  }
             additional: {  }
             weight: 0
+        third_party_settings: {  }
       -
         layout_id: layout_onecol
         layout_settings: {  }
@@ -76,6 +77,7 @@ third_party_settings:
                 entity: layout_builder.entity
             additional: {  }
             weight: 3
+        third_party_settings: {  }
       -
         layout_id: layout_onecol
         layout_settings: {  }
@@ -97,6 +99,7 @@ third_party_settings:
                 entity: layout_builder.entity
             additional: {  }
             weight: 0
+        third_party_settings: {  }
       -
         layout_id: layout_onecol
         layout_settings: {  }
@@ -119,6 +122,7 @@ third_party_settings:
                 entity: layout_builder.entity
             additional: {  }
             weight: 0
+        third_party_settings: {  }
     allow_custom: true
     is_enabled: true
     enabled: true
