--- a/config/sync/core.entity_view_display.paragraph.pullquote.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.pullquote.preview.yml
@@ -5,6 +5,8 @@ dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
     - field.field.paragraph.pullquote.field_admin_description
+    - field.field.paragraph.pullquote.field_quote
+    - field.field.paragraph.pullquote.field_source
     - field.field.paragraph.pullquote.field_widget_title
     - paragraphs.paragraphs_type.pullquote
   module:
