--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -68,6 +68,7 @@ module:
   node: 0
   options: 0
   page_cache: 0
+  paragraphs_library: 0
   paragraphs_type_permissions: 0
   path: 0
   pathologic: 0
