--- a/config/sync/core.entity_view_display.media.document.banner.yml
+++ b/config/sync/core.entity_view_display.media.document.banner.yml
@@ -4,6 +4,7 @@ status: false
 dependencies:
   config:
     - core.entity_view_mode.media.banner
+    - field.field.media.document.field_media_categories
     - field.field.media.document.field_media_file
     - media.type.document
   module:
@@ -33,6 +34,7 @@ third_party_settings:
                 entity: layout_builder.entity
             additional: {  }
             weight: 0
+        third_party_settings: {  }
     enabled: true
 _core:
   default_config_hash: Ug5hcPT-Rj1T9WKjLJulJGJ-7wvsl0zHR1zYN5W_SLM
