--- a/config/sync/core.entity_view_display.node.event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.event.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.event.body
     - field.field.node.event.field_banner
     - field.field.node.event.field_category
+    - field.field.node.event.field_date
     - field.field.node.event.field_event_location
     - field.field.node.event.field_event_pin_info
     - field.field.node.event.field_metatags
