--- a/config/sync/core.entity_view_display.node.landing_page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.landing_page.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.landing_page.body
     - field.field.node.landing_page.field_banner
     - field.field.node.landing_page.field_metatags
+    - field.field.node.landing_page.field_paragraphs
     - field.field.node.landing_page.layout_builder__layout
     - node.type.landing_page
   module:
@@ -47,6 +48,7 @@ third_party_settings:
                 third_party_settings: {  }
             additional: {  }
             weight: 1
+        third_party_settings: {  }
     enabled: true
     allow_custom: false
 _core:
