--- a/config/sync/core.entity_view_display.node.page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.page.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.page.body
     - field.field.node.page.field_banner
     - field.field.node.page.field_metatags
+    - field.field.node.page.field_paragraphs
     - node.type.page
   module:
     - layout_builder
@@ -46,3 +47,4 @@ hidden:
   field_banner: true
   field_metatags: true
   field_oc_widgets: true
+  field_paragraphs: true
