--- a/config/sync/core.entity_view_display.paragraph.links_files.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.links_files.preview.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.paragraph.preview
     - field.field.paragraph.links_files.field_admin_description
     - field.field.paragraph.links_files.field_file_multi
+    - field.field.paragraph.links_files.field_link_multi
     - field.field.paragraph.links_files.field_widget_title
     - paragraphs.paragraphs_type.links_files
   module:
