--- a/config/sync/core.entity_view_display.paragraph.text.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.text.preview.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
     - field.field.paragraph.text.field_admin_description
+    - field.field.paragraph.text.field_long_text
     - field.field.paragraph.text.field_widget_title
     - paragraphs.paragraphs_type.text
   module:
