--- a/config/sync/core.entity_view_display.paragraph.from_library.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.from_library.default.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.from_library.field_reusable_paragraph
     - paragraphs.paragraphs_type.from_library
 _core:
   default_config_hash: UNy5HGiSJovvo01kWshHZrTCS4EyUI0MKYJ0imqnRbg
@@ -11,14 +10,5 @@ id: paragraph.from_library.default
 targetEntityType: paragraph
 bundle: from_library
 mode: default
-content:
-  field_reusable_paragraph:
-    weight: 0
-    label: hidden
-    settings:
-      view_mode: default
-      link: false
-    third_party_settings: {  }
-    type: entity_reference_entity_view
-    region: content
+content: {  }
 hidden: {  }
