--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,7 @@
     "drupal/entity_browser": "^2.0.0",
     "drupal/entity_embed": "1.x-dev",
     "drupal/entity_reference_revisions": "1.6.0",
-    "drupal/entity_usage": "^2.0@alpha",
+    "drupal/entity_usage": "^2.0@beta",
     "drupal/extlink": "^1.1",
     "drupal/field_group": "^1.0@RC",
     "drupal/flippy": "1.x-dev",
