--- a/composer.json
+++ b/composer.json
@@ -87,8 +87,8 @@
     "drupal/hreflang": "^1.1",
     "drupal/image_style_quality": "^1.3",
     "drupal/inline_entity_form": "^1.0@beta",
-    "drupal/layout_builder_restrictions": "^1.2",
-    "drupal/libraries": "3.x-dev",
+    "drupal/layout_builder_restrictions": "^2.2",
+    "drupal/libraries": "^3.0@alpha",
     "drupal/link_attributes": "^1.5",
     "drupal/linkit": "^4.3",
     "drupal/media_entity": "^2.0",
