--- a/config/sync/search_api.index.nodes.yml
+++ b/config/sync/search_api.index.nodes.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - field.storage.node.body
+    - field.storage.node.field_tags
     - search_api.server.local
   module:
+    - taxonomy
     - node
     - search_api
 _core:
@@ -24,6 +26,17 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.body
+  tags:
+    label: Tags
+    datasource_id: 'entity:node'
+    property_path: 'field_tags:entity:name'
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_tags
+      module:
+        - taxonomy
+        - taxonomy
   title:
     label: Title
     datasource_id: 'entity:node'
@@ -64,10 +77,29 @@ processor_settings:
     weights:
       preprocess_index: -46
       preprocess_query: -46
+  ignore_character:
+    all_fields: true
+    fields:
+      - body
+      - tags
+      - title
+    ignorable: '[''¿¡!?,.:;]'
+    ignorable_classes:
+      - Pc
+      - Pd
+      - Pe
+      - Pf
+      - Pi
+      - Po
+      - Ps
+    weights:
+      preprocess_index: -10
+      preprocess_query: -10
   ignorecase:
     all_fields: true
     fields:
       - body
+      - tags
       - title
     weights:
       preprocess_index: -48
@@ -77,6 +109,7 @@ processor_settings:
     all_fields: true
     fields:
       - body
+      - tags
       - title
     exceptions:
       mexican: mexic
@@ -88,6 +121,7 @@ processor_settings:
     all_fields: true
     fields:
       - body
+      - tags
       - title
     spaces: ''
     overlap_cjk: 1
@@ -95,6 +129,15 @@ processor_settings:
     weights:
       preprocess_index: -49
       preprocess_query: -49
+  transliteration:
+    all_fields: true
+    fields:
+      - body
+      - tags
+      - title
+    weights:
+      preprocess_index: -20
+      preprocess_query: -20
   type_boost:
     boosts:
       'entity:node':
