--- a/config/sync/core.entity_form_display.paragraph.landing_page_section.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.landing_page_section.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.paragraph.landing_page_section.field_section_intro
     - field.field.paragraph.landing_page_section.field_section_title
     - field.field.paragraph.landing_page_section.field_section_widgets
+    - field.field.paragraph.landing_page_section.field_style
     - paragraphs.paragraphs_type.landing_page_section
   module:
     - paragraphs
@@ -58,7 +59,7 @@ content:
     region: content
   field_section_widgets:
     type: paragraphs
-    weight: 7
+    weight: 6
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -68,7 +69,17 @@ content:
       add_mode: button
       form_display_mode: default
       default_paragraph_type: _none
+      closed_mode_threshold: 0
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
     third_party_settings: {  }
+    region: content
+  field_style:
+    weight: 5
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
 hidden:
   created: true
