--- a/config/sync/core.entity_view_display.paragraph.landing_page_section.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.landing_page_section.preview.yml
@@ -10,13 +10,13 @@ dependencies:
     - field.field.paragraph.landing_page_section.field_section_intro
     - field.field.paragraph.landing_page_section.field_section_title
     - field.field.paragraph.landing_page_section.field_section_widgets
+    - field.field.paragraph.landing_page_section.field_style
     - paragraphs.paragraphs_type.landing_page_section
   module:
     - layout_builder
     - options
 third_party_settings:
   layout_builder:
-    sections: {  }
     enabled: false
     allow_custom: false
 id: paragraph.landing_page_section.preview
@@ -39,6 +39,14 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
+  field_style:
+    type: entity_reference_label
+    weight: 2
+    region: content
+    label: inline
+    settings:
+      link: false
+    third_party_settings: {  }
 hidden:
   field_anchor_link: true
   field_section_intro: true
