--- a/web/themes/citizen_patterns/citizen_patterns.libraries.yml
+++ b/web/themes/citizen_patterns/citizen_patterns.libraries.yml
@@ -30,6 +30,10 @@ media-js:
   version: 1.0
   js:
     dist/02-molecules/media/_media.min.js.gz: { minified: true }
+menu-block:
+  version: 1.0
+  js:
+    dist/02-molecules/menus/menu-block/_menu-block.min.js.gz: { minified: true }
 modal:
   version: 1.0
   js:
